[APB-4299][SJM] Fixing whitespace at bottom of check your answers form

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -247,6 +247,10 @@
     }
 }
 
+#checkAnswers label {
+    margin-bottom: 0px;
+}
+
 /* no js style for dates */
 .no-js .form-date .form-field--error {
     border-left: none;
